--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ fastapi==0.86.0
 uvicorn==0.19.0
 black==22.10.0
 ipython==8.5.0
+wikipedia==1.4.0
+pydantic==1.10.2
+git+http://github.com/LIAAD/yake
